[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boum"
version = "0.1.0"
description = "SDK to interact with the boum API"
authors = ["Marc Pfander <marc.pfander@boum.garden>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

