[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boum"
version = "0.2.0"
description = "SDK to interact with the boum API"
authors = ["Marc Pfander <marc.pfander@boum.garden>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"
bumpver = "^2022.1119"
pytest-rerunfailures = "^10.3"
pandas = "^1.5.2"


[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

